Fix English grammer in changelog_unreleased

--- a/changelog_unreleased/angular/17534.md
+++ b/changelog_unreleased/angular/17534.md
@@ -15,7 +15,7 @@
 {{ void(1 + 2) }}
 
 // Prettier stable
-The new syntax not corretly recognized.
+The new syntax is not correctly recognized.
 
 // Prettier main
 {{ a in b }}
