--- a/changelog_unreleased/api/17331.md
+++ b/changelog_unreleased/api/17331.md
@@ -1,6 +1,6 @@
 #### Add `isSupported` function support for `languages` API (#17331 by @JounQin, #17490 by @fisker)
 
-Previously, `languages` API for custom plugin only supported to infer parser based on the file basename or extension.
+Previously, `languages` API for custom plugins only supported inferring parser based on the file basename or extension.
 
 Prettier main added `isSupported: (options: { filepath: string }) => boolean` function to allow plugin check if file is supported based on the full path (eg: files in a specific directory).
 
@@ -11,7 +11,7 @@ When using from APIs(eg: `prettier.format()`), Prettier can not ensure it's a va
 
 :::
 
-If no `isSupported` provided, it just behaviors the same way as before.
+If no `isSupported` provided, it just behaves the same way as before.
 
 ```js
 export const languages = [
