--- a/changelog_unreleased/css/17362.md
+++ b/changelog_unreleased/css/17362.md
@@ -1,6 +1,6 @@
 #### Support `@utility` directive for Tailwind (#17362 by @sosukesuzuki)
 
-This changes supports `@utility` directive for Tailwind CSS V4.
+This change supports `@utility` directive for Tailwind CSS V4.
 
 <!-- prettier-ignore -->
 ```css
