--- a/changelog_unreleased/flow/17520.md
+++ b/changelog_unreleased/flow/17520.md
@@ -2,7 +2,7 @@
 
 `@prettier/plugin-hermes` is based on [Hermes JS Engine](https://github.com/facebook/hermes/blob/main/README.md).
 
-This plugin include a new parser `hermes` (Flow syntax), to use this plugin:
+This plugin includes a new parser `hermes` (Flow syntax), to use this plugin:
 
 1. Install the plugin
 
@@ -17,7 +17,7 @@ This plugin include a new parser `hermes` (Flow syntax), to use this plugin:
      - "@prettier/plugin-hermes"
    ```
 
-Due to package size limitation, this plugin is not included in the `prettier` package, it needs to be installed separately.
+Due to package size limitations, this plugin is not included in the `prettier` package, it needs to be installed separately.
 
 **We plan to make this as the default parser for Flow syntax support in v4, we'll also remove `babel-flow` parser in v4, please give it a try.**
 
