--- a/changelog_unreleased/javascript/17472.md
+++ b/changelog_unreleased/javascript/17472.md
@@ -2,7 +2,7 @@
 
 `@prettier/plugin-oxc` is based on [OXC](https://oxc.rs/)(A **fast** JavaScript and TypeScript parser in Rust).
 
-This plugin include two new parser `oxc` (JavaScript syntax) and `oxc-ts` (TypeScript syntax), to use this plugin:
+This plugin includes two new parsers `oxc` (JavaScript syntax) and `oxc-ts` (TypeScript syntax), to use this plugin:
 
 1. Install the plugin
 
@@ -17,7 +17,7 @@ This plugin include two new parser `oxc` (JavaScript syntax) and `oxc-ts` (TypeS
      - "@prettier/plugin-oxc"
    ```
 
-Due to package size limitation, this plugin is not included in the `prettier` package, it needs to be installed separately.
+Due to package size limitations, this plugin is not included in the `prettier` package, it needs to be installed separately.
 
 For more information, check [the package homepage](https://github.com/prettier/prettier/tree/main/packages/plugin-oxc).
 
