--- a/changelog_unreleased/api/17167.md
+++ b/changelog_unreleased/api/17167.md
@@ -1,6 +1,6 @@
 #### Accept `URL` as custom config file in `resolveConfig` (#17167 by @fisker)
 
-[`prettier.resolveConfig()`](https://prettier.io/docs/api#prettierresolveconfigfileurlorpath--options) now accepts an [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL) with `file:` protocol or a url string starts with `file:` as custom config file location.
+[`prettier.resolveConfig()`](https://prettier.io/docs/api#prettierresolveconfigfileurlorpath--options) now accepts an [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL) with `file:` protocol or a url string that starts with `file:` as custom config file location.
 
 ```js
 // `URL`
