--- a/changelog_unreleased/api/17178.md
+++ b/changelog_unreleased/api/17178.md
@@ -2,9 +2,9 @@
 
 `*.frag` was interpreted as JavaScript files, but `.frag` is also used in GLSL([OpenGL Shading Language](https://en.wikipedia.org/wiki/OpenGL_Shading_Language)). It causes error when Prettier try to format them as JavaScript files.
 
-Since Prettier main, `*.frag` files except `*.start.frag`, `*.end.frag`, `start.frag`, and `end.frag` no longer treat as JavaScript files.
+Since Prettier main, `*.frag` files except `*.start.frag`, `*.end.frag`, `start.frag`, and `end.frag` are no longer treated as JavaScript files.
 
-If you have JavaScript files with `.frag` not match patterns mentioned above, you can config with `overrides`.
+If you have JavaScript files with `.frag` that do not match the patterns mentioned above, you can config with `overrides`.
 
 ```js
 export default {
