--- a/changelog_unreleased/api/17548.md
+++ b/changelog_unreleased/api/17548.md
@@ -1,6 +1,6 @@
 #### Fix plugin loading in `prettier.getFileInfo()` (#17548 by @fisker)
 
-In previous version, `prettier.getFileInfo()` only read `parser` config from `.prettierrc`, but doesn't load plugin to infer parser from plugin `languages`, Prettier main fixed it.
+In previous version, `prettier.getFileInfo()` only read `parser` config from `.prettierrc`, but doesn't load plugins to infer parser from plugin `languages`, Prettier main fixed it.
 
 ```js
 // prettier-plugin-foo
