--- a/changelog_unreleased/javascript/17145.md
+++ b/changelog_unreleased/javascript/17145.md
@@ -1,6 +1,6 @@
 #### Add parentheses to `AssignmentExpression` in class property keys (#17145 by @fisker)
 
-Previously we only add parentheses to `AssignmentExpression` in object keys, but not in class property keys. Thanks for [Biome](https://biomejs.dev/formatter/differences-with-prettier/#prettier-has-an-inconsistent-behavior-for-assignment-in-computed-keys) to bring our attention on this inconsistent.
+Previously we only add parentheses to `AssignmentExpression` in object keys, but not in class property keys. Thanks to [Biome](https://biomejs.dev/formatter/differences-with-prettier/#prettier-has-an-inconsistent-behavior-for-assignment-in-computed-keys) for bringing our attention to this inconsistency.
 
 <!-- prettier-ignore -->
 ```jsx
