Fix incorrect change

--- a/changelog_unreleased/cli/17505.md
+++ b/changelog_unreleased/cli/17505.md
@@ -1,4 +1,4 @@
-#### Fix exitCode when parser cannot infer the file type (#17505 by @fisker)
+#### Fix exitCode when parser cannot infer (#17505 by @fisker)
 
 ```console
 touch unknown
