--- a/changelog_unreleased/javascript/17472.md
+++ b/changelog_unreleased/javascript/17472.md
@@ -23,4 +23,4 @@ For more information, check [the package homepage](https://github.com/prettier/p
 
 <!-- spell-checker: disable-next-line-->
 
-Many thanks to the OXC team(@boshen, @overlookmotel, and other contributors).
+Many thanks to the OXC team([@boshen](https://github.com/boshen), [@overlookmotel](https://github.com/overlookmotel), and other contributors).
