--- a/changelog_unreleased/typescript/17650.md
+++ b/changelog_unreleased/typescript/17650.md
@@ -1,4 +1,4 @@
-#### Allow const without initializer (#17650 by @fisker)
+#### Allow const without initializer (#17650, #17654 by @fisker)
 
 <!-- prettier-ignore -->
 ```jsx
@@ -9,6 +9,11 @@ export const version: string;
 SyntaxError: Unexpected token (1:21)
 > 1 | export const version: string;
     |                     ^
+
+// Prettier stable (--parser=oxc-ts)
+SyntaxError: Missing initializer in const declaration (1:14)
+> 1 | export const version: string;
+    |              ^^^^^^^^^^^^^^^
 
 // Prettier main
 export const version: string;
