Fix typo in v3.6.0 release notes for markdown
Unbalanced `*` in the example text

--- a/website/blog/2025-06-23-3.6.0.md
+++ b/website/blog/2025-06-23-3.6.0.md
@@ -771,7 +771,7 @@ Correctly parsed as CSS.
 
 #### Fix strong emphasis ([#17143](https://github.com/prettier/prettier/pull/17143) by [@fiji-flo](https://github.com/fiji-flo)) {#change-17143}
 
-Most markdown implementations don't support `1**_2_**3` so prefer `1***2**3`.
+Most markdown implementations don't support `1**_2_**3` so prefer `1***2***3`.
 
 <!-- prettier-ignore -->
 ```md
