--- a/changelog_unreleased/api/17679.md
+++ b/changelog_unreleased/api/17679.md
@@ -1,3 +1,3 @@
 #### Allow `plugin.parser.preprocess` to return a `Promise` (#17679 by @fisker)
 
-Align with `plugin.printer.preprocess`, which allows to return a `Promise`.
+Align with [`plugin.printer.preprocess`](https://prettier.io/docs/plugins#optional-preprocess), which allows to return a `Promise`.
