--- a/changelog_unreleased/flow/17681.md
+++ b/changelog_unreleased/flow/17681.md
@@ -1,4 +1,4 @@
-#### Support "match" syntax (#17681 by @fisker)
+#### Add basic support for "match" syntax (#17681 by @fisker)
 
 <!-- prettier-ignore -->
 ```jsx
