Update title in 17760.md

--- a/changelog_unreleased/markdown/17760.md
+++ b/changelog_unreleased/markdown/17760.md
@@ -1,4 +1,6 @@
-#### Fix(Markdown): inserts newline in lists containing codeblock but skips last element(#17731) (#17760 by @TYKevin)
+#### Fix(Markdown): inserts newline in lists containing codeblock but skips last element (#17760 by @TYKevin)
+
+Fixes #17731.
 
 Minor refactor to derive Markdown list looseness from the ancestor list’s spread property in the AST, instead of relying on a trailing newline character.
 
