--- a/changelog_unreleased/markdown/17760.md
+++ b/changelog_unreleased/markdown/17760.md
@@ -2,7 +2,7 @@
 
 Fixes #17731.
 
-Minor refactor to derive Markdown list looseness from the ancestor list’s spread property in the AST, instead of relying on a trailing newline character.
+Minor refactor to derive Markdown list looseness from the ancestor list’s spread property in the AST, instead of relying on a trailing newline character. And revert `loose-items.js` from #14372 for cross-platform consistency.
 
 Additionally, this PR consolidates and mirrors logic from #17675 and #16637 into `isLooseListItem`, since all are used to determine list looseness.
 
