--- a/changelog_unreleased/javascript/17708.md
+++ b/changelog_unreleased/javascript/17708.md
@@ -4,7 +4,7 @@ The Stage 2 proposal ["Discard Bindings"](https://github.com/tc39/proposal-disca
 
 <!-- prettier-ignore -->
 ```jsx
-const [a, void] = iter; // author intends to consume two elements
-// vs.
-const [a, void, void] = iter; // author intends to consume three elements
+const [void] = x;
+
+const {x:void} = x;
 ```
