Fix duplicated comments in interpolation issue

--- a/changelog_unreleased/angular/17862.md
+++ b/changelog_unreleased/angular/17862.md
@@ -1,4 +1,4 @@
-#### ix comments get duplicated in interpolation (#17862 by @fisker)
+#### Fix comments get duplicated in interpolation (#17862 by @fisker)
 
 Angular 20.1 added support for new assignment operators.
 
