Fix CSS comment in changelog

--- a/changelog_unreleased/css/17841.md
+++ b/changelog_unreleased/css/17841.md
@@ -2,17 +2,17 @@
 
 <!-- prettier-ignore -->
 ```css
-// Input
+/* Input */
 ol[type=a s] {
   list-style-type: lower-alpha;
 }
 
-// Prettier stable
+/* Prettier stable */
 ol[type="a s"] {
   list-style-type: lower-alpha;
 }
 
-// Prettier main
+/* Prettier main */
 ol[type="a" s] {
   list-style-type: lower-alpha;
 }
