--- a/changelog_unreleased/css/17841.md
+++ b/changelog_unreleased/css/17841.md
@@ -1,4 +1,4 @@
-#### Handle attribute selector value ending with s flag (#17841 by @kovsu)
+#### Handle attribute selector with case-sensitive flag (#17841 by @kovsu)
 
 <!-- prettier-ignore -->
 ```css
