Fix formatting of else if syntax in changelog

--- a/changelog_unreleased/handlebars/17856.md
+++ b/changelog_unreleased/handlebars/17856.md
@@ -1,4 +1,4 @@
-#### Preserve else if syntax for custom helpers (#17856 by @kovsu)
+#### Preserve `else if` syntax for custom helpers (#17856 by @kovsu)
 
 <!-- prettier-ignore -->
 ```hbs
