Correct variable name casing in changelog entry

--- a/changelog_unreleased/less/17820.md
+++ b/changelog_unreleased/less/17820.md
@@ -1,4 +1,4 @@
-#### Fix less variable name been lowercased incorrectly (#17820 by @kovsu)
+#### Fix variable name being lowercased incorrectly (#17820 by @kovsu)
 
 <!-- prettier-ignore -->
 ```less
