--- a/changelog_unreleased/css/17841.md
+++ b/changelog_unreleased/css/17841.md
@@ -3,17 +3,20 @@
 <!-- prettier-ignore -->
 ```css
 /* Input */
-ol[type=a s] {
-  list-style-type: lower-alpha;
-}
+[type=a s] {}
+[type=a S] {}
+[type=a I] {}
+[type=a x] {}
 
 /* Prettier stable */
-ol[type="a s"] {
-  list-style-type: lower-alpha;
-}
+[type="a s"] {}
+[type="a S"] {}
+[type="a I"] {}
+[type="a x"] {}
 
 /* Prettier main */
-ol[type="a" s] {
-  list-style-type: lower-alpha;
-}
+[type="a" s] {}
+[type="a" S] {}
+[type="a" I] {}
+[type="a" x] {}
 ```
