--- a/changelog_unreleased/css/17841.md
+++ b/changelog_unreleased/css/17841.md
@@ -1,5 +1,7 @@
 #### Handle attribute selector with case-sensitive flag (#17841 by @kovsu)
 
+Parser only understands the `i` flag. This PR treats all unknown letters as flag.
+
 <!-- prettier-ignore -->
 ```css
 /* Input */
