--- a/changelog_unreleased/css/17841.md
+++ b/changelog_unreleased/css/17841.md
@@ -1,24 +1,25 @@
-#### Handle attribute selector with case-sensitive flag (#17841 by @kovsu)
-
-Parser only understands the `i` flag. This PR treats all unknown letters as flag.
+#### Handle attribute selector with case-sensitive and uppercase case-insensitive flags (#17841, #17865 by @kovsu)
 
 <!-- prettier-ignore -->
 ```css
 /* Input */
-[type=a s] {}
-[type=a S] {}
-[type=a I] {}
-[type=a x] {}
+[type=a s],
+[type=a S],
+[type=a I] {
+  list-style-type: lower-alpha;
+}
 
 /* Prettier stable */
-[type="a s"] {}
-[type="a S"] {}
-[type="a I"] {}
-[type="a x"] {}
+[type="a s"],
+[type="a S"],
+[type="a I"] {
+  list-style-type: lower-alpha;
+}
 
 /* Prettier main */
-[type="a" s] {}
-[type="a" S] {}
-[type="a" I] {}
-[type="a" x] {}
+[type="a" s],
+[type="a" S],
+[type="a" I] {
+  list-style-type: lower-alpha;
+}
 ```
