Make the example more real

--- a/changelog_unreleased/javascript/17882.md
+++ b/changelog_unreleased/javascript/17882.md
@@ -3,13 +3,14 @@
 <!-- prettier-ignore -->
 ```js
 // Input
-import("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module")
+const module = await import("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module")
 
 // Prettier stable
-import(
+const module = await import(
   "./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
 );
 
-// Prettier main
-import("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module")
+// Prettier mainconst module =
+const module =
+  await import("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
 ```
