--- a/changelog_unreleased/javascript/17882.md
+++ b/changelog_unreleased/javascript/17882.md
@@ -3,7 +3,7 @@
 <!-- prettier-ignore -->
 ```js
 // Input
-const module = await import("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module")
+const module = await import("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
 
 // Prettier stable
 const module = await import(
