--- a/changelog_unreleased/javascript/17882.md
+++ b/changelog_unreleased/javascript/17882.md
@@ -1,4 +1,4 @@
-#### Avoid break `ImportExpression` with long module name (#17882 by @kovsu)
+#### Avoid break `import()` with long module name (#17882 by @kovsu)
 
 <!-- prettier-ignore -->
 ```js
