Update changelog entry for custom properties crash fix

--- a/changelog_unreleased/css/17899.md
+++ b/changelog_unreleased/css/17899.md
@@ -1,4 +1,4 @@
-#### Fix crash when formatting custom properties (#17899 by @fisker)
+#### Fix crash when formatting special custom properties (#17899 by @fisker)
 
 <!-- prettier-ignore -->
 ```css
