--- a/changelog_unreleased/yaml/17843.md
+++ b/changelog_unreleased/yaml/17843.md
@@ -1,18 +1,18 @@
-#### Preserve empty line before endComment (#17843 by @kovsu)
+#### Preserve empty line between map and comment (#17843 by @kovsu)
 
 <!-- prettier-ignore -->
 ```yaml
 # Input
 only: issues
 
-# Optionally, specify configuration settings that are specific to just 'issues' or 'pulls':
+# Comment
 
 # Prettier stable
 only: issues
-# Optionally, specify configuration settings that are specific to just 'issues' or 'pulls':
+# Comment
 
 # Prettier main
 only: issues
 
-# Optionally, specify configuration settings that are specific to just 'issues' or 'pulls':
+# Comment
 ```
