--- a/changelog_unreleased/scss/17903.md
+++ b/changelog_unreleased/scss/17903.md
@@ -1,4 +1,4 @@
-#### Prevent matching mixin calls inside parameters (#17903 by @kovsu)
+#### Fix formatting of space-separated values (#17903 by @kovsu)
 
 <!-- prettier-ignore -->
 ```scss
