--- a/changelog_unreleased/css/17929.md
+++ b/changelog_unreleased/css/17929.md
@@ -1,4 +1,4 @@
-#### Fix ICSS detection for nested exports (#17929 by @kovsu)
+#### Fix selector been lowercased incorrectly inside css modules (#17929 by @kovsu)
 
 <!-- prettier-ignore -->
 ```css
