Use a real "output"

--- a/changelog_unreleased/html/17909.md
+++ b/changelog_unreleased/html/17909.md
@@ -1,13 +1,26 @@
-#### Format inline event handler attributes (#17909 by @kovsu)
+#### Format inline event handler (#17909 by @kovsu)
 
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
-<button onclick="alert(    '1')">Click</button>
+<button
+  type="button"
+  onclick="console .log(    'Hello, this is my old-fashioned event handler!')"
+>Press me</button>
 
 <!-- Prettier stable -->
-<button onclick="alert(    '1')">Click</button>
+<button
+  type="button"
+  onclick="console.log('Hello, this is my old-fashioned event handler!')"
+>
+  Press me
+</button>
 
 <!-- Prettier main -->
-<button onclick="alert('1');">Click</button>
+<button
+  type="button"
+  onclick="console.log('Hello, this is my old-fashioned event handler!')"
+>
+  Press me
+</button>
 ```
