--- a/changelog_unreleased/css/17938.md
+++ b/changelog_unreleased/css/17938.md
@@ -1,20 +1,20 @@
-#### Handle CSS selectors with comment-like strings (#17938 by @kovsu)
+#### Fix formatting of CSS selectors contains `//` (#17938 by @kovsu)
 
 <!-- prettier-ignore -->
 ```css
 /* Input */
-a[herf="//"] {
+a[href="http://example.com"] {
   color: red;
 }
 
 /* Prettier stable */
-a[herf="//"]
+a[href="http://example.com"]
 {
   color: red;
 }
 
 /* Prettier main */
-a[herf="//"] {
+a[href="http://example.com"] {
   color: red;
 }
 ```
