Update changelog to avoid possible bug in website rendering

--- a/changelog_unreleased/html/17879.md
+++ b/changelog_unreleased/html/17879.md
@@ -1,4 +1,4 @@
-#### Support format `allow` attribute of `<iframe>` (#17879 by @kovsu)
+#### Support format `allow` attribute of iframe element (#17879 by @kovsu)
 
 <!-- prettier-ignore -->
 ```html
