--- a/changelog_unreleased/markdown/17965.md
+++ b/changelog_unreleased/markdown/17965.md
@@ -1,4 +1,4 @@
-#### Infer TOML parser Front Matter for Front Matter (#17965 by @kovsu)
+#### Infer TOML parser for Front Matter (#17965 by @kovsu)
 
 TOML Front Matter can be processed by the appropriate plugin if any.
 Works for HTML and CSS files too.
