Add validation for import/export syntax

--- a/tests/format/mdx/mdx/import-export.mdx
+++ b/tests/format/mdx/mdx/import-export.mdx
@@ -31,3 +31,8 @@ export default () =>
 
 export const a = 1;
 export const b = 1;
+
+---
+
+- import is a word in lists
+- export is a word in lists, too!
