--- a/changelog_unreleased/mdx/17996.md
+++ b/changelog_unreleased/mdx/17996.md
@@ -1,4 +1,4 @@
-#### Improve emoji size measurement (#17996 by @kovsu)
+#### Add validation guard for `import` and `export` (#17996 by @kovsu)
 
 <!-- prettier-ignore -->
 ```mdx
