--- a/changelog_unreleased/mdx/17996.md
+++ b/changelog_unreleased/mdx/17996.md
@@ -1,4 +1,4 @@
-#### Add validation guard for `import` and `export` (#17996 by @kovsu)
+#### Don't parse ES syntax in open blocks (#17996 by @kovsu)
 
 <!-- prettier-ignore -->
 ```mdx
