--- a/changelog_unreleased/javascript/17998.md
+++ b/changelog_unreleased/javascript/17998.md
@@ -1,4 +1,4 @@
-#### Improve comment handing between if statement condition and the "body" (#XXXX by @user)
+#### Improve comment handing between if statement condition and the "body" (#17998 by @fisker)
 
 <!-- prettier-ignore -->
 ```jsx
