--- a/changelog_unreleased/javascript/17998.md
+++ b/changelog_unreleased/javascript/17998.md
@@ -1,38 +1,31 @@
-#### Improve comment handing between if statement condition and the "body" (#17998 by @fisker)
+#### Improve comment handing inside if statement (#17998 by @fisker)
 
 <!-- prettier-ignore -->
 ```jsx
 // Input
 if (foo) // comment
 {
-  doThing(foo);
-}
-
-if (foo)
-/* comment */
+  doThing();
+} else // comment for else
 {
-  doThing(foo);
+  doSomethingElse();
 }
 
 // Prettier stable
 if (foo) {
   // comment
-  doThing(foo);
-}
-
-if (foo) {
-  /* comment */
-  doThing(foo);
+  doThing();
+} // comment for else
+else {
+  doSomethingElse();
 }
 
 // Prettier main
 if (foo) // comment
 {
-  doThing(foo);
-}
-
-if (foo) /* comment */
+  doThing();
+} else // comment for else
 {
-  doThing(foo);
+  doSomethingElse();
 }
 ```
