--- a/changelog_unreleased/mdx/17996.md
+++ b/changelog_unreleased/mdx/17996.md
@@ -1,4 +1,4 @@
-#### Don't parse ES syntax in open blocks (#17996 by @kovsu)
+#### Fix `import` and `export` parsing (#17996 by @kovsu & @fisker)
 
 <!-- prettier-ignore -->
 ```mdx
