--- a/tests/format/mdx/import-export/like-import-declaration.mdx
+++ b/tests/format/mdx/import-export/like-import-declaration.mdx
@@ -7,3 +7,5 @@ import .meta; export {} from "./foo"
 import .meta; import {} from "./foo"
 
 import ("./foo")
+
+import {} from   "./foo";            export {}
