--- a/changelog_unreleased/typescript/18035.md
+++ b/changelog_unreleased/typescript/18035.md
@@ -1,7 +1,7 @@
 #### Improve CommonJS module `require()` with comments (#18035 by @fisker)
 
 <!-- prettier-ignore -->
-```jsx
+```tsx
 // Input
 import foo = require(
 // Comment
