--- a/changelog_unreleased/api/18055.md
+++ b/changelog_unreleased/api/18055.md
@@ -1,6 +1,6 @@
 #### Pass ancestors to `plugin.print.canAttachComment()` (#18055 by @fisker)
 
-This is useful to exclude a specific child.
+This prevent attaching comments to a specific child of node.
 
 For example in this JavaScript code `const object = {property};`, the `Identifier`(`property`) presents as both `Property.key` and `Property.value` in AST, but they will only get printed once, if the comment is attached to the non-printable child the comment will get lost.
 
