--- a/changelog_unreleased/api/18055.md
+++ b/changelog_unreleased/api/18055.md
@@ -2,7 +2,7 @@
 
 This prevent attaching comments to a specific child of node.
 
-For example in this JavaScript code `const object = {property};`, the `Identifier`(`property`) presents as both `Property.key` and `Property.value` in AST, but they will only get printed once, if the comment is attached to the non-printable child the comment will get lost.
+For example in this JavaScript code `const object = {property};`, the `Identifier`(`property`) presents as both `Property.key` and `Property.value` in AST, obviously it can only print once, if the comment is attached to the non-printable child the comment will get lost.
 
 We can prevent such case happening by add a `canAttachComment` like this:
 
