--- a/changelog_unreleased/api/18055.md
+++ b/changelog_unreleased/api/18055.md
@@ -2,9 +2,9 @@
 
 This prevent attaching comments to a specific child of node.
 
-For example in this JavaScript code `const object = {property};`, the `Identifier`(`property`) presents as both `Property.key` and `Property.value` in AST, obviously it can only print once, if the comment is attached to the non-printable child the comment will get lost.
+For example in this JavaScript code `const object = {property};`, the `Identifier` node (`property`) appears as both `Property.key` and `Property.value` in the AST, obviously it can only print once, if the comment is attached to the non-printable child the comment will get lost.
 
-We can prevent such case happening by add a `canAttachComment` like this:
+Plugins can now avoid this by adding a `canAttachComment` like this:
 
 ```js
 export const canAttachComment = (node, [parent]) =>
@@ -14,6 +14,7 @@ export const canAttachComment = (node, [parent]) =>
     parent.key === node &&
     parent.key !== parent.value
   );
+
 export const print = (path, options, print) => {
   const { node } = path;
   switch (node.type) {
