Fix for previous PRs

--- a/changelog_unreleased/api/18055.md
+++ b/changelog_unreleased/api/18055.md
@@ -1,4 +1,4 @@
-#### Pass ancestors to `plugin.print.canAttachComment()` (#18055 by @fisker)
+#### Pass ancestors to `plugin.printer.canAttachComment()` (#18055 by @fisker)
 
 This prevent attaching comments to a specific child of node.
 
