--- a/changelog_unreleased/api/18072.md
+++ b/changelog_unreleased/api/18072.md
@@ -1,3 +1,3 @@
 #### Allow plugin to provide an `estree` printer (#18072 by @fisker)
 
-Previously if a plugin want to make an `estree` plugin that output different code base on builtin ones, plugin need provide both `parsers` and `printers`. Prettier main allows plugin to create a plugin that only provide `estree` printer.
+Previously, if a plugin wanted to make a plugin with `estree` printer that outputs different code based on the built-in one, plugin need provide both `parsers` and `printers`. Prettier main allows a plugin to create a plugin that only provides `estree` printer.
