--- a/changelog_unreleased/handlebars/18065.md
+++ b/changelog_unreleased/handlebars/18065.md
@@ -1,4 +1,4 @@
-#### Fix extra blank lines in `<style>` tags with `htmlWhitespaceSensitivity: "ignore"` (#18065 by @kovsu)
+#### Fix extra blank lines in `<style>` tags (#18065 by @kovsu)
 
 <!-- prettier-ignore -->
 ```hbs
@@ -9,7 +9,7 @@
   }
 </style>
 
-{{!-- Prettier stable --}}
+{{!-- Prettier stable (--html-whitespace-sensitivity=ignore) --}}
 <style>
 
   #foo {
@@ -18,7 +18,7 @@
 
 </style>
 
-{{!-- Prettier main --}}
+{{!-- Prettier main (--html-whitespace-sensitivity=ignore)  --}}
 <style>
   #foo {
     color: red;
