--- a/changelog_unreleased/typescript/17421.md
+++ b/changelog_unreleased/typescript/17421.md
@@ -1,4 +1,4 @@
-#### Fix misplacement of comments from after an arrow to before it (#17421 by @o-m12a)
+#### Fix misplacement of comments from after an arrow to before it (#17421 by @o-m12a & @t-mangoe)
 
 Prior to this fix, formatting arrow function declarations that met all of the following conditions could result in misplaced comments:
 
