--- a/changelog_unreleased/api/18070.md
+++ b/changelog_unreleased/api/18070.md
@@ -1,4 +1,4 @@
-#### Add `plugin.printer.printPrettierIgnored()` (#18070 by @fisker)
+#### Add support for `plugin.printer.printPrettierIgnored()` (#18070 by @fisker)
 
 For a node with `prettier-ignore` comment, Prettier prints the text of the node directly. However, this may cause problems, for example, the node needs to be parenthesized or needs to print a leading semicolon to prevent ASI in `--no-semi` mode.
 
