--- a/changelog_unreleased/javascript/18087.md
+++ b/changelog_unreleased/javascript/18087.md
@@ -1,31 +1,25 @@
-#### Don't indent single argument in binary expressions (#18087 by @kovsu)
+#### Do not indent a single logical expression argument (#18087 by @kovsu)
 
 <!-- prettier-ignore -->
 ```js
 // Input
-Boolean(
-  a_long_long_condition |
-  a_long_long_condition |
-  a_long_long_condition |
-  a_long_long_condition |
-  a_long_long_condition,
+Foo(
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition,
 );
 
 // Prettier stable
-Boolean(
-  a_long_long_condition |
-    a_long_long_condition |
-    a_long_long_condition |
-    a_long_long_condition |
-    a_long_long_condition,
+Foo(
+  a_long_long_long_long_condition ||
+    a_long_long_long_long_condition ||
+    a_long_long_long_long_condition,
 );
 
 // Prettier main
-Boolean(
-  a_long_long_condition |
-  a_long_long_condition |
-  a_long_long_condition |
-  a_long_long_condition |
-  a_long_long_condition,
+Foo(
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition,
 );
 ```
