--- a/changelog_unreleased/less/17983.md
+++ b/changelog_unreleased/less/17983.md
@@ -1,4 +1,4 @@
-#### Keep less mixin lookups tight (#17983 by @kovsu)
+#### Keep property/variable accessors tight (#17983 by @kovsu)
 
 <!-- prettier-ignore -->
 ```less
