Add jspereiramoura as author

--- a/changelog_unreleased/typescript/18109.md
+++ b/changelog_unreleased/typescript/18109.md
@@ -1,4 +1,4 @@
-#### Remove unexpected blank line before union types (#18109 by @fisker)
+#### Remove unexpected blank line before union types (#18109 by @jspereiramoura, @fisker)
 
 <!-- prettier-ignore -->
 ```tsx
