--- a/changelog_unreleased/typescript/18109.md
+++ b/changelog_unreleased/typescript/18109.md
@@ -30,3 +30,5 @@ type A =  // comment
   | Baz2000
   | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
 ```
+
+_This change apply to Flow syntax too_
