--- a/changelog_unreleased/typescript/18110.md
+++ b/changelog_unreleased/typescript/18110.md
@@ -1,4 +1,4 @@
-#### Fix inconsistent comment print in property signature (#18110 by @fisker)
+#### Fix inconsistent comment printing between `typescript` and `flow` parser (#18110 by @fisker)
 
 <!-- prettier-ignore -->
 ```tsx
@@ -60,7 +60,7 @@ interface C {
     BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
 }
 
-// Prettier main
+// Prettier main (Same output for `--parser=typescript` and `--parser=flow`)
 interface A {
   property: B; // Comment
 }
