--- a/changelog_unreleased/typescript/18109.md
+++ b/changelog_unreleased/typescript/18109.md
@@ -31,4 +31,4 @@ type A =  // comment
   | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
 ```
 
-_This change apply to Flow syntax too_
+_This change applies to Flow syntax too_
