--- a/changelog_unreleased/typescript/18110.md
+++ b/changelog_unreleased/typescript/18110.md
@@ -4,39 +4,27 @@
 ```tsx
 // Input
 interface A {
-  property: // Comment
-    B
-}
-
-interface B  {
-  elements: // Comment
+  a: // Comment
+    B;
+  b: // Comment
   	| Fooo1000
     | Baz2000
-    | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong
-}
-
-interface C  {
-  elements: // Comment
+    | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
+  c: // Comment
   	& Fooo1000
     & Baz2000
-    & BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong
+    & BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
 }
 
 // Prettier stable (--parser=typescript)
 interface A {
-  property: // Comment
+  a: // Comment
   B;
-}
-
-interface B {
-  elements: // Comment
+  b: // Comment
   | Fooo1000
     | Baz2000
     | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
-}
-
-interface C {
-  elements: // Comment
+  c: // Comment
   Fooo1000 &
     Baz2000 &
     BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
@@ -44,36 +32,24 @@ interface C {
 
 // Prettier stable (--parser=flow)
 interface A {
-  property: B; // Comment
-}
-
-interface B {
-  elements:  // Comment
+  a: B; // Comment
+  b:  // Comment
     | Fooo1000
     | Baz2000
     | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
-}
-
-interface C {
-  elements: Fooo1000 & // Comment
+  c: Fooo1000 & // Comment
     Baz2000 &
     BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
 }
 
 // Prettier main (Same output for `--parser=typescript` and `--parser=flow`)
 interface A {
-  property: B; // Comment
-}
-
-interface B {
-  elements:  // Comment
+  a: B; // Comment
+  b:  // Comment
     | Fooo1000
     | Baz2000
     | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
-}
-
-interface C {
-  elements: // Comment
+  c: // Comment
   Fooo1000 &
     Baz2000 &
     BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
