--- a/changelog_unreleased/typescript/18094.md
+++ b/changelog_unreleased/typescript/18094.md
@@ -1,37 +1,21 @@
-#### Remove extra indention in class type parameters (#18094 by @fisker)
+#### Fix the inconsistent printing between class and interface (#18094, #18091 by @fisker)
 
-<!--
-We plan to fix the inconsistent printing between class and interface, I(fisker) plan to put all changes together.
-
-This addresses the first part of #18093.
-
-We'll change this part to
-
-```
-The extra indention for type parameters in class has been removed
-```
-
-when we add more changes.
-
-TODO: Update the output for `Prettier main` in #18091
--->
+##### The extra indention for type parameters in class has been removed
 
 <!-- prettier-ignore -->
 ```tsx
 // Input
 interface MarkDef<
   M extends string | Mark = Mark,
-  ES extends ExprRef | SignalRef = ExprRef | SignalRef
-> extends
-    A,
-    B {}
+  ES extends ExprRef | SignalRef = ExprRef | SignalRef,
+>
+  extends A, B {}
 
 declare class MarkDef<
   M extends string | Mark = Mark,
-  ES extends ExprRef | SignalRef = ExprRef | SignalRef
-> implements
-    A,
-    B {}
+  ES extends ExprRef | SignalRef = ExprRef | SignalRef,
+>
+  implements A, B {}
 
 // Prettier stable
 interface MarkDef<
@@ -50,8 +34,8 @@ declare class MarkDef<
 interface MarkDef<
   M extends string | Mark = Mark,
   ES extends ExprRef | SignalRef = ExprRef | SignalRef,
-> extends A,
-    B {}
+>
+  extends A, B {}
 
 declare class MarkDef<
   M extends string | Mark = Mark,
@@ -60,4 +44,32 @@ declare class MarkDef<
   implements A, B {}
 ```
 
-_This change also affects Flow syntax_
+##### Align interface heritages print with class
+
+<!-- prettier-ignore -->
+```tsx
+// Input
+export interface AreaConfig<ES extends ExprRef | SignalRef>
+  extends MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+
+export class AreaConfig<ES extends ExprRef | SignalRef>
+  implements MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+
+// Prettier stable
+export interface AreaConfig<ES extends ExprRef | SignalRef>
+  extends MarkConfig<ES>,
+    PointOverlayMixins<ES>,
+    LineOverlayMixins<ES> {}
+
+export class AreaConfig<ES extends ExprRef | SignalRef>
+  implements MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+
+// Prettier main
+export interface AreaConfig<ES extends ExprRef | SignalRef>
+  extends MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+
+export class AreaConfig<ES extends ExprRef | SignalRef>
+  implements MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+```
+
+_These changes also affects Flow syntax_
