--- a/changelog_unreleased/typescript/18094.md
+++ b/changelog_unreleased/typescript/18094.md
@@ -1,6 +1,6 @@
 #### Fix the inconsistent printing between class and interface (#18094, #18091 by @fisker)
 
-##### The extra indention for type parameters in class has been removed
+##### The extra indentation for type parameters in class has been removed
 
 <!-- prettier-ignore -->
 ```tsx
@@ -72,4 +72,54 @@ export class AreaConfig<ES extends ExprRef | SignalRef>
   implements MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
 ```
 
-_These changes also affects Flow syntax_
+##### Inconsistent opening brace print logic of class and interface body
+
+In Prettier v2.3, to improve visual separation between class head and body, [we start to print `{` of class body on a new line when the class has multiple heritages](https://prettier.io/blog/2021/05/09/2.3.0.html#improve-visual-separation-between-header-and-body-in-classes-with-multiline-headers-10085-by-sosukesuzuki).
+
+<!-- prettier-ignore -->
+```tsx
+// Prettier 2.2
+class loooooooooooooooooooong
+  extends looooooooooooooooooong
+  implements loooooooooooooooooooong {
+  property: string;
+}
+
+// Prettier 2.3
+class loooooooooooooooooooong
+  extends looooooooooooooooooong
+  implements loooooooooooooooooooong
+{
+  property: string;
+}
+```
+
+However, not everyone happy with this change. Please leave a comment on [this issue](https://github.com/prettier/prettier/issues/18115), if you have a better solution, we'll be happy to discuss, if there is no other solution come up, we'll align the interface body print with the one for class body.
+
+<!-- prettier-ignore -->
+```
+// Input
+declare class loooooooooooooooooooong
+  implements looooooooooooooooooong, loooooooooooooooooooong {
+  property: string;
+}
+
+interface loooooooooooooooooooong
+  extends looooooooooooooooooong, loooooooooooooooooooong {
+  property: string;
+}
+
+// Prettier main
+declare class loooooooooooooooooooong
+  implements looooooooooooooooooong, loooooooooooooooooooong
+{
+  property: string;
+}
+
+interface loooooooooooooooooooong
+  extends looooooooooooooooooong, loooooooooooooooooooong { // <-- This
+  property: string;
+}
+```
+
+_These changes also affect Flow syntax_
