--- a/changelog_unreleased/typescript/18109.md
+++ b/changelog_unreleased/typescript/18109.md
@@ -31,4 +31,4 @@ type A =  // comment
   | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
 ```
 
-_This change also affects Flow syntax_
+_This change also affect Flow syntax_
