--- a/changelog_unreleased/typescript/18094.md
+++ b/changelog_unreleased/typescript/18094.md
@@ -97,7 +97,7 @@ class loooooooooooooooooooong
 However, not everyone happy with this change. Please leave a comment on [this issue](https://github.com/prettier/prettier/issues/18115), if you have a better solution, we'll be happy to discuss. If there is no other solution come up, we'll align the interface body print with the one for class body.
 
 <!-- prettier-ignore -->
-```
+```tsx
 // Input
 declare class loooooooooooooooooooong
   implements looooooooooooooooooong, loooooooooooooooooooong {
