--- a/changelog_unreleased/typescript/18094.md
+++ b/changelog_unreleased/typescript/18094.md
@@ -94,7 +94,13 @@ class loooooooooooooooooooong
 }
 ```
 
-However, not everyone happy with this change. Please leave a comment on [this issue](https://github.com/prettier/prettier/issues/18115), if you have a better solution, we'll be happy to discuss. If there is no other solution come up, we'll align the interface body print with the one for class body in Prettier v4.
+However, not everyone happy with this change.
+
+Let us know what do you think applying this change to interfaces, please leave a comment on [this issue](https://github.com/prettier/prettier/issues/18115).
+
+If you have a better solution for this issue, we'll be happy to discuss too.
+
+Unless a better solution come up, we'll align the interface body print with the one for class body in Prettier v4.
 
 <!-- prettier-ignore -->
 ```tsx
